--- a/client/src/pages/cartpage.css
+++ b/client/src/pages/cartpage.css
@@ -135,6 +135,7 @@ z-index: 500;
     margin-bottom: 20px;
     border-radius: 5px;
   }
+
   
 
 
@@ -266,7 +267,6 @@ z-index: 500;
   
     .cart-item_panier {
        
-        height: 350px;
       }
       
   
@@ -460,20 +460,20 @@ top: 1px;
   
 }
 .button_size{
-  border: rgb(192, 192, 192) solid 3px; 
+  border: #ccc solid 3px; 
   padding: 5px;
   background-color: transparent;
-  border-radius: 10px;
-  margin-top: 5px;
+  border-radius: 5px;
+  margin-top: 0px;
   margin-right: 5px;
+  margin-bottom: -70px;
   color: #444444;
   font-weight: 700;
   transition: 0.3s;
 }
-.button_size:hover{
-  background-color: #FF416C;
-  border-color:#FF416C;
-}
+/* .button_size:hover{
+  border-color:rgb(37, 37, 37);
+} */
 .total_price{
   font-size: 20px;
   font-weight: 700;
@@ -488,7 +488,7 @@ top: 1px;
   @media (max-width: 490px) {
   
     .remove-button{
-      top: -240px;
+     
     }
     .votrestickers{
       font-size: 18px;
@@ -500,6 +500,12 @@ top: 1px;
       font-size: 15px;
       top: -2px;
       position: relative;
+    }
+    .bloc_select_size{
+      width: 100%;
+    }
+    .select_size{
+      width: 100%;
     }
   }
 
@@ -542,7 +548,7 @@ top: 1px;
   }
   .bloc_input{
     position: relative;
-    margin-top: 30px;
+    margin-top: -80px;
     padding: 10px;
     width:100%;
     left: 0px;
@@ -556,6 +562,4 @@ top: 1px;
   }
 
 }
-.red-border {
-  border: 1px solid red !important;
-}
+
